--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@ body {
     height: auto;
     box-sizing:border-box;
     padding: 2rem;
-    margin: 1rem;
+    margin: 1rem auto;
 }
 .container img {
     border-radius: 50%;
     width: 75px;
-    margin-left: 7rem;
-    margin-bottom: .5rem;
+    margin-left: 6.5rem;
+    margin-bottom: 2rem;
     justify-content: center;
 }
 .container h2 {
